--- a/package.json
+++ b/package.json
@@ -32,5 +32,6 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "homepage": "https://custom-hooks-example.netlify.app"
 }
